# nexla-sdk

./: .gitignore  AGENTS.md  README.md  nexla-sdk.code-workspace  nexla.skill  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  test_auth_param_import.py  turbo.json  verify_type_checking.py
.changeset/: config.json  wise-lions-whisper.md
.cursor/rules/: 01-project-overview.mdc  02-api-modules.mdc  04-examples-and-usage.mdc  05-models-and-typing.mdc  05-project-setup.mdc
.github/workflows/: ci-ts-integration.yml  ci-ts.yml  docs.yml  release-ts.yml  release.yml
docs-site/: README.md  REPORT.md  docusaurus.config.cjs  package-lock.json  package.json  sidebars.cjs
docs-site/docs/: authentication-credentials.md  getting-started.md  observability-logging-metrics-tracing.md  quickstart.md
docs-site/scripts/: gen_api_docs.py
docs/ts-sdk/: api-coverage.md  architecture.md  integration-tests.md  migration-guide.md  parity-matrix.md
examples/: basic_usage.py  fetch_resources.py
examples/api/: audit_logs.py  client.py  credentials.py  destinations.py  flows.py  lookups.py  metrics.py  nexsets.py  notifications.py  quarantine_settings.py  schemas.py  sources.py  teams.py  transforms.py  users.py
nexla_sdk/: __init__.py  auth.py  client.py  exceptions.py  http.py  http_client.py  telemetry.py
nexla_sdk/api/: __init__.py  audit_logs.py  base.py  credentials.py  destinations.py  flows.py  lookups.py  nexsets.py  organizations.py  projects.py  sources.py  teams.py  users.py  (+2 more)
scripts/: setup_dev_env.sh
tests/: conftest.py  run_tests.py  test_client_init.py
(+312 files in other folders)
